--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
+* {
+  box-sizing: border-box;
+}
 body {
   height: 98vh;
   /* width: 100%; */
   background-color: #8ec5fc;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
   font-family: "Rubik", sans-serif;
+  
+}
+
+#wrapper.blur {
+  -webkit-filter: blur(8px);
+     -moz-filter: blur(8px);
+       -o-filter: blur(8px);
+      -ms-filter: blur(8px);
+          filter: blur(8px);
 }
 
 .container {
@@ -73,7 +85,7 @@ button {
   border-radius: 8px;
 }
 
-button{
+button {
   border-radius: 20px;
 }
 
@@ -88,5 +100,109 @@ button:hover {
 }
 
 .btn-add {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  /* bottom: 0; */
+  /* right: 15px; */
+  /* border: 3px solid #f1f1f1; */
+  /* z-index: 20; */
+  /* width: 500px;
+  height: 200px; */
+  top: 30%;
+  left: 54%;
+  margin-top: -100px; /* Negative half of height. */
+  margin-left: -250px; /* Negative half of width. */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+
+  padding: 20px;
+}
+
+/* Full-width input fields */
+.form-container input[type="text"],
+.form-container input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type="text"]:focus,
+.form-container input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover,
+.open-button:hover {
+  opacity: 1;
+}
+
+#footer {
+  margin-top: auto;
+  text-align: center;
+}
+
+a {
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+  font-size: 1.1rem;
+}
+
+a:link {
+  color: #2ba6c8;
+}
+
+a:visited {
+  color: #2ba6c8;
+}
+
+a:focus {
+  border-bottom: 1px solid;
+  background: #152533;
+}
+
+a:hover {
+  border-bottom: 1px solid;
+  background: #152533;
+}
+
+a:active {
+  color: #284167;
 }
