--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,9 @@
 }
 body {
   height: 98vh;
-  /* width: 100%; */
   background-color: #8ec5fc;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
   font-family: "Rubik", sans-serif;
-  
-}
-
-#wrapper.blur {
-  -webkit-filter: blur(8px);
-     -moz-filter: blur(8px);
-       -o-filter: blur(8px);
-      -ms-filter: blur(8px);
-          filter: blur(8px);
 }
 
 .container {
@@ -24,22 +14,17 @@ body {
   color: #1f1732;
 }
 
-.header {
-  padding: 30px;
-}
-
 .lib,
-.footer {
+.footer,
+.header {
   padding: 30px;
 }
 
 .cp {
   padding-bottom: 10px;
-  /* size: 1.3rem; */
 }
 
 #lib-table {
-  font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
@@ -48,25 +33,17 @@ body {
 #lib-table th {
   border: 1px solid #000000;
   padding: 8px;
-}
-
-#lib-table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
 #lib-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px;
   text-align: left;
   background-color: #57acc2;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
-/*  */
 button {
-  appearance: none;
-  -webkit-appearance: none;
-  font-family: sans-serif;
   cursor: pointer;
   padding: 5px;
   min-width: 100px;
@@ -82,92 +59,66 @@ button.focus {
 }
 
 button {
-  border-radius: 8px;
-}
-
-button {
-  border-radius: 20px;
-}
-
-button {
   background: #3498db;
   color: #ffffff;
+  border-radius: 20px;
 }
 
 button:hover {
   background: #2980b9;
-  color: #ffffff;
 }
 
 .btn-add {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
-/* The popup form - hidden by default */
 .form-popup {
   display: none;
   position: fixed;
-  /* bottom: 0; */
-  /* right: 15px; */
-  /* border: 3px solid #f1f1f1; */
-  /* z-index: 20; */
-  /* width: 500px;
-  height: 200px; */
   top: 30%;
   left: 54%;
-  margin-top: -100px; /* Negative half of height. */
-  margin-left: -250px; /* Negative half of width. */
+  margin-top: -100px;
+  margin-left: -250px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    
 }
 
-/* Add styles to the form container */
 .form-container {
   max-width: 300px;
   padding: 10px;
-  background-color: #8ec5fc;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
-
   padding: 20px;
 }
 
-/* Full-width input fields */
 .form-container input[type="text"],
 .form-container input[type="password"] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
 }
 
-/* When the inputs get focus, do something */
 .form-container input[type="text"]:focus,
 .form-container input[type="password"]:focus {
   background-color: #ddd;
   outline: none;
 }
 
-/* Set a style for the submit/login button */
 .form-container .btn {
   background-color: #2b9ba3;
   color: white;
   padding: 16px 20px;
-  border: none;
   cursor: pointer;
   width: 100%;
   margin-bottom: 10px;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
-/* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: rgb(223, 16, 16);
 }
 
-/* Add some hover effects to buttons */
 .form-container .btn:hover,
 .open-button:hover {
   opacity: 1;
@@ -193,16 +144,7 @@ a:visited {
   color: #2ba6c8;
 }
 
-a:focus {
-  border-bottom: 1px solid;
-  background: #152533;
-}
-
 a:hover {
   border-bottom: 1px solid;
   background: #152533;
-}
-
-a:active {
-  color: #284167;
 }
