--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,8 @@ button:hover {
 }
 
 .form-container input[type="text"],
-.form-container input[type="password"] {
+.form-container input[type="password"],
+.form-container input[type="number"] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -106,7 +107,8 @@ button:hover {
 }
 
 .form-container input[type="text"]:focus,
-.form-container input[type="password"]:focus {
+.form-container input[type="password"]:focus,
+.form-container input[type="number"]:focus {
   background-color: #ddd;
   outline: none;
 }
